kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
  namespace: test
  labels:
    app: demo-test
spec:
  containers:
    - name: demo-container
      image: mvanderheijden/demo:latest
      ports:
        - containerPort: 8080
          protocol: TCP
      resources:
        limits:
          cpu: 50m
          memory: 128Mi
        requests:
          cpu: 10m
          memory: 64Mi
