kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: test
spec:
  selector:
    app: demo-test
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
